# icrc2-wallet

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/icrc2-wallet-backend/: Cargo.toml  icrc2-wallet-backend.did
src/icrc2-wallet-backend/src/: lib.rs
src/icrc2-wallet-frontend/: package.json
src/icrc2-wallet-frontend/src/: App.js
src/scripts/: list_principals.sh  setup_ledger_and_deploy_backend.sh
